テンプレートからの変更漏れを修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,10 @@ jobs:
         run: pip install poetry
 
       - name: Install dependencies
-        run: poetry install --no-interaction --no-root
+        run: poetry install --with dev --no-interaction --no-root
 
       - name: Run tests
-        run: poetry run pytest --cov=temp_repo --cov-report=xml      
+        run: poetry run pytest --cov=autoscropts_csv --cov-report=xml      
 
       - name: Upload coverage artifact
         if: success()
