--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ packages = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "pandas (>=2.2.3,<3.0.0)",
+    "pytest (>=8.3.5,<9.0.0)"
 ]
 
 
@@ -30,9 +32,13 @@ ruff = "^0.11.8"
 autoscripts-csv = "autoscripts_csv.cli:main"
 
 [tool.ruff]
-line-length = 88
-select = ["E", "F", "I", "B", "UP", "SIM"]
 fix = true
+line-length = 88
+
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "B", "UP", "SIM"]
+
 
 [tool.coverage.run]
 source = ["autoscripts_csv"]
