--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
-    "pytest (>=8.3.5,<9.0.0)"
+    "pytest (>=8.3.5,<9.0.0)",
+    "requests (>=2.32.3,<3.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 
 
