--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: poetry install --with dev --no-interaction --no-root
 
       - name: Run tests
-        run: poetry run pytest --cov=autoscripts_csv --cov-report=xml:coverage.xml
+        run: poetry run pytest --cov=src/autoscripts_csv --cov-report=xml:coverage.xml
        
       - name: Upload coverage artifact
         if: success()
